test/error/ast/RelIncompatibleType.mod
MODULE RelIncompatibleType;
VAR a, b: SET; t: BOOLEAN;
BEGIN
  t := a < b;
END RelIncompatibleType.
